<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dip" >

    <TextView
        android:id="@+id/about2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:maxLines="15"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:text="@string/aboutTextCN"
        android:textColorLink="@color/cyan"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textSize="15sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/noteTextCN"
        android:textColorLink="@color/cyan"
        android:textSize="15sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/aboutContact"
        android:textColorLink="@color/cyan"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="检查更新" />

</LinearLayout>